--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.41.0",
-    "@types/node": "^20.11.5"
+    "@types/node": "^20.11.5",
+    "jest": "^29.7.0"
   }
 }
